# air-hockey

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/include/: bat.hpp  board.hpp  box.hpp  buff.hpp  button.hpp  collision.hpp  effect.hpp  energy_bar.hpp  image.hpp  images.hpp  keystate.hpp  mousestate.hpp  object.hpp  piece.hpp  puck.hpp  sdl_utils.hpp  sprite.hpp  texture.hpp  vector2d.hpp  windbar.hpp
src/include/animation/: energy_bar.hpp
src/include/object/: bat.hpp  puck.hpp
src/lib/: bat.cpp  board.cpp  box.cpp  buff.cpp  button.cpp  collision.cpp  effect.cpp  energy_bar.cpp  image.cpp  images.cpp  mousestate.cpp  object.cpp  puck.cpp  sdl_utils.cpp  sprite.cpp  texture.cpp  vector2d.cpp  windbar.cpp
src/lib/animation/: energy_bar.cpp
src/lib/object/: bat.cpp  puck.cpp
